--- a/application/resources/AppointmentsView.fxml
+++ b/application/resources/AppointmentsView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
@@ -10,12 +11,13 @@
    <children>
       <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="75.0" prefWidth="900.0" style="-fx-background-color: white;">
          <children>
-            <ComboBox fx:id="choicesComboBox" layoutX="338.0" layoutY="20.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="225.0" style="-fx-background-color: #f7f7f7; -fx-border-color: #1C3E74; -fx-background-radius: 10; -fx-border-radius: 10;" />
-            <Label layoutX="215.0" layoutY="20.0" prefHeight="35.0" prefWidth="80.0" text="Odaberite:" textFill="#1c3e74">
+            <ComboBox fx:id="choicesComboBox" layoutX="338.0" layoutY="20.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="225.0" style="-fx-background-color: #f7f7f7; -fx-border-color: #af1010; -fx-background-radius: 20; -fx-border-radius: 20;" />
+            <Label layoutX="207.0" layoutY="18.0" prefHeight="40.0" prefWidth="125.0" text="Odaberite filter:" textFill="#1c3e74">
                <font>
                   <Font name="Franklin Gothic Medium Cond" size="18.0" />
                </font>
             </Label>
+            <Separator layoutY="74.0" prefHeight="10.0" prefWidth="900.0" style="-fx-background-color: #1C3E74;" />
          </children>
       </AnchorPane>
       <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="900.0">
@@ -31,21 +33,22 @@
               </columns>
             </TableView>
          </children></AnchorPane>
+      <Separator prefHeight="10.0" prefWidth="900.0" style="-fx-background-color: #1C3E74;" />
       <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: white;">
          <children>
-            <Button fx:id="scheduleExaminationButton" layoutX="100.0" layoutY="15.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: #f7f7f7; -fx-background-radius: 7; -fx-border-color: #1C3E74; -fx-border-radius: 7; -fx-border-width: 2;" text="Zakaži pregled" textFill="#af1010">
+            <Button fx:id="scheduleExaminationButton" layoutX="370.0" layoutY="15.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="45.0" prefWidth="160.0" style="-fx-background-color: #f7f7f7; -fx-background-radius: 50; -fx-border-color: #1C3E74; -fx-border-radius: 50;" text="Zakaži pregled" textFill="#af1010" wrapText="true">
                <font>
-                  <Font name="Franklin Gothic Medium" size="19.0" />
+                  <Font name="Franklin Gothic Medium" size="18.0" />
                </font>
             </Button>
-            <Button layoutX="390.0" layoutY="15.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#refreshView" prefHeight="40.0" prefWidth="120.0" style="-fx-background-color: #f7f7f7; -fx-background-radius: 7; -fx-border-color: #1C3E74; -fx-border-radius: 7; -fx-border-width: 2;" text="Osvježi" textFill="#af1010">
+            <Button layoutX="100.0" layoutY="15.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#refreshView" prefHeight="45.0" prefWidth="160.0" style="-fx-background-color: #f7f7f7; -fx-background-radius: 50; -fx-border-color: #1C3E74; -fx-border-radius: 50;" text="Osvježi" textFill="#af1010">
                <font>
-                  <Font name="Franklin Gothic Medium" size="19.0" />
+                  <Font name="Franklin Gothic Medium" size="18.0" />
                </font>
             </Button>
-            <Button fx:id="startPageButton" layoutX="600.0" layoutY="15.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: #f7f7f7; -fx-background-radius: 7; -fx-border-color: #1C3E74; -fx-border-radius: 7; -fx-border-width: 2;" text="Početna stranica" textFill="#af1010">
+            <Button fx:id="startPageButton" layoutX="600.0" layoutY="15.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="45.0" prefWidth="160.0" style="-fx-background-color: #f7f7f7; -fx-background-radius: 50; -fx-border-color: #1C3E74; -fx-border-radius: 50;" text="Početna stranica" textFill="#af1010">
                <font>
-                  <Font name="Franklin Gothic Medium" size="19.0" />
+                  <Font name="Franklin Gothic Medium" size="18.0" />
                </font>
             </Button>
          </children>
