--- a/application/resources/ServicesView.fxml
+++ b/application/resources/ServicesView.fxml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
-
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
@@ -30,5 +30,6 @@
             <Font name="Arial" size="18.0" />
          </font>
       </TextField>
+      <Line endX="500.0" fill="#1c3e74" layoutX="101.0" layoutY="325.0" smooth="false" startX="-100.0" stroke="#1c3e74" />
    </children>
 </AnchorPane>
